--- a/popup.css
+++ b/popup.css
@@ -1,56 +1,54 @@
 * {
-  padding: 50;
-  margin: 50;
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
 body {
-  background-color: #ffc0c4;
+  background-image: linear-gradient(to bottom, #fb5353, #ff6b6c, #ff8184, #ff969b, #ffabb1);
+  width: 20rem;
 }
 .wrapper {
-  width: 400px;
+  width: 100px;
   position: absolute;
-  transform: translate(-30%, -30%);
+  transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
 }
 .container {
   width: 100%;
-  background-color: #f43543;
-  padding: 50px 40px;
-  box-shadow: 0 20px 65px rgba(87, 11, 16, 0.5);
+  background-image: linear-gradient(to bottom, #fb5353, #ff6b6c, #ff8184, #ff969b, #ffabb1);
+  padding: 20px 20px;
+  box-shadow: 0 10px35px rgba(87, 11, 16, 0.5);
   position: relative;
   border-radius: 8px;
   text-align: center;
 }
-.container:after {
-  content: "";
-  position: absolute;
-  width: 80%;
-  height: 120%;
-  background-color: #ffffff;
-  z-index: -1;
-  top: -10%;
-  left: 10%;
-}
 .container p {
   color: #fdd8d8;
   line-height: 2;
-  font-size: 18px;
+  font-size: 15px;
+}
+.container h1 {
+  color: #ffffff;
+  margin: 10px 0 20px 0;
+  font-weight: 600;
+  text-transform: capitalize;
 }
 .container h3 {
   color: #ffffff;
-  margin: 20px 0 60px 0;
+  margin: 10px 0 20px 0;
   font-weight: 600;
   text-transform: capitalize;
 }
 .container button {
   background-color: #ffffff;
   border: none;
-  padding: 15px 45px;
+  padding: 7px 25px;
   border-radius: 5px;
-  font-size: 18px;
+  font-size: 12px;
   font-weight: 600;
   color: #f43543;
   cursor: pointer;
+  margin-bottom: 1rem;
 }
